concord_macros/tests/trybuild/fail/parser/route/base_malformed_url.stderr
error: base URL must contain only scheme and host
 --> tests/trybuild/fail/parser/route/base_malformed_url.rs:5:36
  |
5 |     client MalformedBaseApi { base "https://example.com/api" }
  |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `concord_core::prelude::*`
 --> tests/trybuild/fail/parser/route/base_malformed_url.rs:1:5
  |
1 | use concord_core::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
